src/objects/Harvest_User__c.object
<CustomObject>
    <fields>
        <fullName>Add_to_all_new_projects_automatically__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add to all new projects automatically</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cost_rate__c</fullName>
        <label>Cost rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Created_at__c</fullName>
        <label>Harvest Record created at</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Default_hourly_rate__c</fullName>
        <label>Default hourly rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_name__c</fullName>
        <label>First name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Harvest_ID__c</fullName>
        <externalId>true</externalId>
        <label>Harvest ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Identity_Account__c</fullName>
        <label>Identity Account ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identity_User__c</fullName>
        <label>Identity User Id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Contractor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contractor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_name__c</fullName>
        <label>Last name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Timezone__c</fullName>
        <label>Timezone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Abu Dhabi</fullName>
                </value>
                <value>
                    <fullName>Adelaide</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Almaty</fullName>
                </value>
                <value>
                    <fullName>Amsterdam</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Astana</fullName>
                </value>
                <value>
                    <fullName>Athens</fullName>
                </value>
                <value>
                    <fullName>Atlantic Time (Canada)</fullName>
                </value>
                <value>
                    <fullName>Auckland</fullName>
                </value>
                <value>
                    <fullName>Azores</fullName>
                </value>
                <value>
                    <fullName>Baghdad</fullName>
                </value>
                <value>
                    <fullName>Baku</fullName>
                </value>
                <value>
                    <fullName>Bangkok</fullName>
                </value>
                <value>
                    <fullName>Beijing</fullName>
                </value>
                <value>
                    <fullName>Belgrade</fullName>
                </value>
                <value>
                    <fullName>Berlin</fullName>
                </value>
                <value>
                    <fullName>Bern</fullName>
                </value>
                <value>
                    <fullName>Bogota</fullName>
                </value>
                <value>
                    <fullName>Brasilia</fullName>
                </value>
                <value>
                    <fullName>Bratislava</fullName>
                </value>
                <value>
                    <fullName>Brisbane</fullName>
                </value>
                <value>
                    <fullName>Brussels</fullName>
                </value>
                <value>
                    <fullName>Bucharest</fullName>
                </value>
                <value>
                    <fullName>Budapest</fullName>
                </value>
                <value>
                    <fullName>Buenos Aires</fullName>
                </value>
                <value>
                    <fullName>Cairo</fullName>
                </value>
                <value>
                    <fullName>Canberra</fullName>
                </value>
                <value>
                    <fullName>Cape Verde Is.</fullName>
                </value>
                <value>
                    <fullName>Caracas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Updated_at__c</fullName>
        <label>Harvest Record updated at</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>has_Wants_Newsletter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Newsletter</label>
        <type>Checkbox</type>
    </fields>
    <label>Harvest User</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Is_Active__c</columns>
        <columns>NAME</columns>
        <columns>First_name__c</columns>
        <columns>Last_name__c</columns>
        <columns>Email__c</columns>
        <columns>Phone__c</columns>
        <columns>Department__c</columns>
        <columns>Default_hourly_rate__c</columns>
        <columns>Timezone__c</columns>
        <columns>Password__c</columns>
        <columns>Add_to_all_new_projects_automatically__c</columns>
        <columns>Is_Admin__c</columns>
        <columns>Is_Contractor__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Harvest User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Harvest People</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>